welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: value unary_! is not a member of (Int, Int)
while (!(0,6)){
       ^